--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,202 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blaze | Home</title>
+    <!-- Favicon -->
+    <link rel="icon" href="static/graze-favicon.png">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Google Fonts API -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <style>
+	
+header {
+    background-color: #ffbf00; 
+    padding: 20px 0;
+    animation: fadeInDown 1s ease;
+}
 
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.header-title {
+    font-family: 'Victor Mono', monospace; 
+    font-size: 32px;
+    color: #ffffff; 
+}
+
+/* Body */
+
+body {
+    font-family: 'Be Vietnam Pro', sans-serif; 
+    background-color: #ffbf00; 
+}
+        .card-img-container {
+            height: 250px; /* Adjust this */
+            overflow: hidden;
+        }
+
+        .card-img-container img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
+	
+	.social-icon {
+	    display: block;
+	    margin: 0 auto; /* Centers the social icons horizontally */
+	    width: 20px; /* Adjust this */
+	    height: auto; /* Adjust this */
+	}
+	    
+	h1 {
+    	    text-align: center;
+            color: #ff8000;
+	}
+
+	h2 {
+    	    text-align: center;
+            color: #ff8000;
+	}
+
+	#what-is-it h2,
+	#what-is-it p {
+	    color: #ff8000;
+	}
+
+	.orange-btn {
+	    background-color: orange;
+	}
+
+
+    </style>
+</head>
+	
+<body>
+	{% if current_user.is_authenticated %}
+<div class="navigation">
+    <a href="/">Home</a>
+    <a href="/#what-is-it">What is Blaze?</a>
+    <a href="/upload">Upload Files</a>
+    <a href="/gallery">Gallery</a>
+    <a href="/logout">Log Out</a>
+	{% else %}
+<div class="navigation">
+    <a href="/">Home</a>
+    <a href="/#what-is-it">What is Blaze?</a>
+    <a href="/sign_up">Sign Up</a>
+    <a href="/login">Log In</a>
+	{% endif %}
+</body>
+
+<!-- Add space here -->
+<div style="margin-top: 75px;"></div>    
+
+<body>
+	{% if current_user.is_authenticated %}
+<h1>You are logged in to Blaze</h1>
+	{% else %}
+<h1>You are not logged in to Blaze</h1>
+	{% endif %}
+</body>
+	
+    <hr>
+	
+<!-- What is it? -->
+    <section id="what-is-it" class="container mt-5">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="/static/graze.png" alt="Graze" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                <h2>Blaze</h2>
+                <p>Blaze Description</p>
+                <p>About Blaze Stuff [make this long]</p>
+            </div>
+        </div>
+    </section>
+
+    <hr>
+
+<!-- Add space here -->
+<div style="margin-top: 30px;"></div>
+
+    <!-- Team Section -->
+    <section id="team" class="bg-dark py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Our Team</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img src="static/alex.jpg" alt="Alex Sheng">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Alex Sheng</h5>
+                            <p class="card-text">Alex is a student in Bridgewater-Raritan.</p>
+                            <a href="https://intrepidbird.me" class="btn btn-primary orange-btn">Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img src="static/dhruv.jpg" alt="Dhruv Rakhade">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Dhruv Rakhade</h5>
+                            <p class="card-text">Dhruv is a student in Bridgewater-Raritan.</p>
+                            <a href="https://pointysphere.github.io" class="btn btn-primary orange-btn">Website</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-img-container">
+                            <img src="static/tharun.jpg" alt="Tharun Naguleswaren">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Tharun Naguleswaran</h5>
+                            <p class="card-text">Tharun is a student in Bridgewater-Raritan.</p>
+                            <a href="https://thernel.me" class="btn btn-primary orange-btn">Website</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  
+<!-- Footer -->
+<!-- Footer with Social Icons Centered -->
+<footer>
+    &copy; 2024 Alex Sheng, Dhruv Rakhade, Tharun Naguleswaren. All rights reserved.
+    <hr>
+    View this Project:
+    <a href="https://github.com/intrepidbird/blaze" target="_blank">
+        <img src="/static/github-icon.png" alt="GitHub" class="social-icon">
+    </a>
+    <a href="https://devpost.com/software/blaze" target="_blank">
+        <img src="/static/devpost-icon.png" alt="Devpost" class="social-icon">
+    </a>
+</footer>
+
+
+<!-- Bootstrap & jQuery JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
