--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blaze | Home</title>
     <!-- Favicon -->
-    <link rel="icon" href="static/graze-favicon.png">
+    <link rel="icon" href="static/blaze-favicon.png">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="static/styles.css">
     <!-- Bootstrap CSS -->
